--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -50,18 +50,19 @@ jobs:
         ports:
           - 5432:5432
     strategy:
+      fail-fast: false
       # Unlike TravisCI, the database will not be part of the matrix. Each
       # sub-job in the matrix tests all three databases. Alternatively, we could
       # have set this up with each database as a separate job, but then we'd be
       # duplicating the matrix configuration three times.
       matrix:
         gemfile:
-          ["rails_5.2", "rails_6.0", "rails_6.1", "rails_7.0", "rails_7.1"]
+          ["rails_5.2", "rails_6.0", "rails_6.1", "rails_7.0", "rails_7.1", "rails_7.2"]
 
         # To keep matrix size down, only test highest and lowest rubies. In
-        # `.rubocopy.yml`, set `TargetRubyVersion`, to the lowest ruby version
+        # `.rubocop.yml`, set `TargetRubyVersion`, to the lowest ruby version
         # tested here.
-        ruby: ["2.6", "2.7"]
+        ruby: ["2.6", "3.3"]
 
         exclude:
           # rails 7 requires ruby >= 2.7.0
@@ -69,9 +70,13 @@ jobs:
             gemfile: "rails_7.0"
           - ruby: "2.6"
             gemfile: "rails_7.1"
+          - ruby: "2.6"
+            gemfile: "rails_7.2"
+          - ruby: "3.3"
+            gemfile: "rails_5.2"
     steps:
       - name: Checkout source
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
       - name: Setup ruby
         uses: ruby/setup-ruby@v1
         with:
